# speconsense

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini  requirements.txt  speconsense.py  summarize_speconsense.py
.github/workflows/: publish.yml
docs/: customizing-fasta-headers.md  dev-merged-ric-context.md  empirical-analysis.md  fasta-fields-design.md  incremental-output-design.md  phase2_variant_phasing_plan.md  position_selection_design.md  profile-parameters.md  rfc-variant-significance-thresholds.md  summarize-enhancements-plan.md  synthetic-testing.md  understanding-ric-and-merging.md  upgrading-to-0.7.md  user-merged-ric-proposal.md
docs/analysis/: compute_critical_rates.py  variant_significance.tex
docs/cer_in_practice/: Makefile  cer_in_practice.tex
docs/hp_error_rate/: Makefile  hp_error_rate_report.tex
speconsense/: __init__.py  _help.py  analyze.py  context.py  core.py  distances.py  msa.py  outliers.py  qctx.py  quality_report.py  refine.py  significance.py  summarize.py  types.py
tests/: __init__.py  test_ambiguity_calling.py  test_analyze.py  test_augment_input.py  test_cer_factor.py  test_complement_flags.py  test_context.py  test_err_factor.py  test_fields.py  test_fit_error_model.py  test_haplotype_filtering.py  test_hp_threshold.py  test_logging.py  test_metadata_cer.py  test_orientation.py  test_outliers.py  test_overlap_merge.py  test_overlap_merge_integration.py  test_profiles.py  test_qctx.py  test_quality_report.py  test_regression.py  test_scalability_parity.py  test_significance.py  test_summarize.py  test_truncated_distance.py  test_variant_phasing.py  test_variant_tree.py  validate_output.py
(+49 files in other folders)
